doc cleanup, rakefile simplify, refactoring